1-nginx-pod.yaml
apiVersion: v1 #it is version of your kubernetes api
kind: Pod
metadata:
  name: nginx
  #namespace: myapp
  labels:
    app: dev
spec:
  containers:
    - name: nginx
      image: nginx
