7-pod-quota-mem.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  namespace: quota-demo-ns
spec:
  containers:
  - image: nginx
    name: nginx
