mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: wordpress
    tier: mysql
spec:
  containers:
    - image: mysql:5.6
      name: mysql
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        - name: my-pv
          mountPath: /var/lib/mysql
  volumes:
    - name: my-pv
      persistentVolumeClaim:
        claimName: mysql-pv-claim
