nginx-pod-2.yaml
apiVersion: v1 #it is version of your kubernetes api
kind: Pod
metadata:
  name: nginx
  #namespace: myapp 
  labels:
    run: nginx
spec:
  nodeSelector:
    kubernetes.io/hostname: gke-cluster-1-default-pool-68004261-zn70
  containers:
    - name: nginx
      image: nginx
