nginx-pod3.yaml
apiVersion: v1 #it is version of your kubernetes api
kind: Pod
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  containers:
    - name: nginx
      image: nginx
