pod-configmap-mysql-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
spec:
  volumes:
  - name: mysql-config
    configMap:
      name: mysql-demo-config
      items:
        - key: my.cnf
          path: my.cnf
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh"]
    args: ["-c", "sleep 600"]
    volumeMounts:
    - name: mysql-config
      mountPath: /mydata
