nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-nodeport
spec:
  # type: LoadBalancer
  type: NodePort
  selector:
    #app: dev
    run: nginx
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30009
